@@ -3,47 +3,31 @@ package tpo.uade.api.service.implementation;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import lombok.RequiredArgsConstructor;
+
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import tpo.uade.api.dto.NavigationDto;
 import tpo.uade.api.dto.ProductDto;
 import tpo.uade.api.mapper.NavigationMapper;
 import tpo.uade.api.mapper.ProductMapper;
 import tpo.uade.api.model.NavigationModel;
 import tpo.uade.api.repository.NavigationRespository;
+import tpo.uade.api.service.INavigationService;
 import tpo.uade.api.service.IRecentlyViewedService;
 
+@RequiredArgsConstructor
 @Service
 public class RecentlyViewedService implements IRecentlyViewedService {
 
-    private final NavigationRespository navigationRespository;
-    private final NavigationMapper navigationMapper;
-    private final ProductMapper productMapper;
+    private final INavigationService navigationService;
     private final ProductService productService;
 
-    RecentlyViewedService(NavigationRespository navigationRespository, NavigationMapper navigationMapper, ProductMapper productMapper, ProductService productService) {
-        this.navigationRespository = navigationRespository;
-        this.navigationMapper = navigationMapper;
-        this.productMapper = productMapper;
-        this.productService = productService;
-    }
-
-    /**
-     * Obtener todos los productos vistos recientemente por usuario
-     * @param i 
-     * @param limit representa la cantidad maxima de productos a mostrar
-     * @return
-     */
-    public List<ProductDto> getAllByUser(Long userId, int limit) {
-        List<NavigationModel> navigationModels = navigationRespository.findByUser_UserId(userId);
-
-        if (navigationModels == null || navigationModels.isEmpty()) {
-            return List.of();
-        }
-
-        return navigationModels.stream()
-                .map(navigationModel -> productMapper.mapFromDatabaseEntity(navigationModel.getProduct()))
-                .limit(limit)
-                .collect(Collectors.toList());
+    public List<ProductDto> get() {
+        List<NavigationDto> lastFiveVisited = navigationService.getLastFiveVisited();
+        List<Long> productsIds = lastFiveVisited.stream().map(NavigationDto::getProductId).toList();
+        return productService.getByIds(productsIds);
     }
     
 }
